[workspace]
members = [
    "renet",
    "demo_chat",
    "demo_bevy",
    "renetcode",
    "bevy_renet",
    "renet_visualizer",
    "renet_steam",
    "renet_netcode",
]
resolver = "2"

[patch.crates-io]
chacha20poly1305 = { git = "https://github.com/Catchawink/AEADs.git", branch = "esp_idf" }
aead = { git = "https://github.com/Catchawink/traits.git", branch = "esp_idf" }
cipher = { git = "https://github.com/Catchawink/traits.git", branch = "esp_idf" }