[workspace]
members = [
    "renet",
#    "demo_chat",
#    "demo_bevy",
    "renetcode",
#    "bevy_renet",
#    "renet_visualizer",
#    "renet_steam",
    "renet_netcode",
]
resolver = "2"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/Catchawink/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/Catchawink/esp-idf-hal.git" }
embuild = { git = "https://github.com/Catchawink/embuild.git" }